--- a/esportes/Basquete/index.html
+++ b/esportes/Basquete/index.html
@@ -13,7 +13,7 @@
         <h1>SportWear</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="../links-e-imagens/index.html">Home</a></li>
                 <li><a href="../Basquete/index.html">Basquete</a></li>
                 <li><a href="../Futebol/index.html">Futebol</a></li>
                 <li><a href="../Formula 1/index.html">Fórmula 1</a></li>
