--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h1>SportWear</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Basquete/index.html">Basquete</a></li>
-                <li><a href="Futebol/index.html">Futebol</a></li>
-                <li><a href="Formula 1/index.html"> Formula 1</a></li>
+                <li><a href="../links-e-imagens/index.html">Home</a></li>
+                <li><a href="../esportes/Basquete/index.html">Basquete</a></li>
+                <li><a href="../esportes/Futebol/index.html">Futebol</a></li>
+                <li><a href="../esportes/Formula 1/index.html 1"> Formula 1</a></li>
             </ul>
         </nav>
     </header>
