--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
             <div class="owner-info">
                 <h3>Proprietário</h3>
                 <p>Henio Richard Rodrigues dos Santos</p>
+                <p>Renan Nunes </p>
+                <p>Luis Filipe</p>
             </div>
         </div>
     </footer>
